--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="screened-out.html">Screened-out</a></li>
         <li><a href="completed.html">Completed</a></li>
-		          <li><a href="completed.html">Rejected</a></li>
+		          <li><a href="rejected.html">Rejected</a></li>
         <li><a href="quota-full.html">Quota Full</a></li>
     </ul>
 
